# wgpu-diffraction

./: CMakeLists.txt  benchmark_all.py  conftest.py  pyproject.toml  test_diffraction.py  test_package.py  test_sf3d.py
.github/workflows/: test.yaml
src/: main.cpp  ocl_device.h  ocl_runtime.h  sf3d_ocl.h  structure_factor.h
src/glsf/: __init__.py
src/wgpu_diffraction/: __init__.py
wgpu_diffraction/: __init__.py
