[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgpu-diffraction"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = ["numpy", "wgpu"]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/wgpu_diffraction"]
